--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,5 +1,9 @@
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:styleshare
+spring.h2.console.path=/h2console
+spring.datasource.url=jdbc:h2:mem:styleshare;MODE=MySQL
+spring.datasource.username=st
+spring.datasource.password=st
+
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.initialization-mode=always
 mybatis.type-aliases-package=styleshare.task.model
