--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
 plugins {
 	id 'org.springframework.boot' version '2.1.4.RELEASE'
 	id 'java'
+	id 'war'
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -46,5 +47,9 @@ dependencies {
     
     // https://mvnrepository.com/artifact/com.github.cliftonlabs/json-simple
 	compile group: 'com.github.cliftonlabs', name: 'json-simple', version: '2.1.2'
+	
+	// https://mvnrepository.com/artifact/com.google.code.gson/gson
+	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+	
     
 }
