--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,11 @@ spring.datasource.url=jdbc:h2:mem:styleshare;MODE=MySQL
 spring.datasource.username=st
 spring.datasource.password=st
 
+#logging
+logging.level.styleshare.task=info
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+logging.pattern.console=[%clr(%d{M/d HH:mm.ss}){cyan}] %clr(${LOG_LEVEL_PATTERN}) %msg%n
+
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.initialization-mode=always
 mybatis.type-aliases-package=styleshare.task.model
