view page 수정시 즉시 반영, 화면 만들고 있음

--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -15,3 +15,5 @@ mybatis.type-aliases-package=styleshare.task.model
 mybatis.mapper-locations=mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 logging.level.styleshare.task.mapper=TRACE
+#server.servlet.jsp.init-parameters.development=true
+spring.devtools.livereload.enabled=true
