--- a/build.gradle
+++ b/build.gradle
@@ -32,24 +32,17 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('javax.servlet:jstl')
     compile('org.apache.tomcat.embed:tomcat-embed-jasper')
+	compile 'com.h2database:h2'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.0.0'
     testCompile ("org.springframework.boot:spring-boot-starter-test:$springBootVersion") {
         exclude group: 'com.vaadin.external.google'
         exclude group:"org.slf4j"
     }
-    
-    // https://mvnrepository.com/artifact/org.springframework/springloaded
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.1.3.RELEASE'
 	compile group: 'org.springframework', name: 'springloaded', version: '1.2.8.RELEASE'
-	
-	compile 'com.h2database:h2'
     compile group: 'org.webjars', name: 'bootstrap', version: '3.3.2'
-    
-    // https://mvnrepository.com/artifact/com.github.cliftonlabs/json-simple
 	compile group: 'com.github.cliftonlabs', name: 'json-simple', version: '2.1.2'
-	
-	// https://mvnrepository.com/artifact/com.google.code.gson/gson
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
-	
-    
+	compile group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '2.1.4.RELEASE'
 }
