--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ mybatis.type-aliases-package=styleshare.task.model
 mybatis.mapper-locations=mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 logging.level.styleshare.task.mapper=TRACE
+#server.servlet.jsp.init-parameters.development=true
+spring.devtools.livereload.enabled=true
