--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,3 +1,6 @@
+#server
+server.port=80
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2console
 spring.datasource.url=jdbc:h2:mem:styleshare;MODE=MySQL
