--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,15 +1,14 @@
 #server
-server.port=80
+#server.port=80
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2console
 spring.datasource.url=jdbc:h2:mem:styleshare;MODE=MySQL
 spring.datasource.username=st
-spring.datasource.password=st
+spring.datasource.password=
 
 #logging
 logging.level.styleshare.task=info
-#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 logging.pattern.console=[%clr(%d{M/d HH:mm.ss}){cyan}] %clr(${LOG_LEVEL_PATTERN}) %msg%n
 
 spring.datasource.driver-class-name=org.h2.Driver
@@ -18,5 +17,4 @@ mybatis.type-aliases-package=styleshare.task.model
 mybatis.mapper-locations=mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 logging.level.styleshare.task.mapper=TRACE
-#server.servlet.jsp.init-parameters.development=true
 spring.devtools.livereload.enabled=true
