--- a/build.gradle
+++ b/build.gradle
@@ -44,4 +44,8 @@ dependencies {
 	compile group: 'com.github.cliftonlabs', name: 'json-simple', version: '2.1.2'
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 	compile group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '2.1.4.RELEASE'
+	compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
+	compile group: 'commons-io', name: 'commons-io', version: '2.6'
+	compile group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.11'
+	
 }
