--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,5 @@ spring.datasource.initialization-mode=always
 mybatis.type-aliases-package=styleshare.task.model
 mybatis.mapper-locations=mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
-logging.level.styleshare.task.mapper=TRACE
+#logging.level.styleshare.task.mapper=TRACE
 spring.devtools.livereload.enabled=true
