--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude module: 'junit'
+    }
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('javax.servlet:jstl')
     compile('org.apache.tomcat.embed:tomcat-embed-jasper')
@@ -38,6 +40,7 @@ dependencies {
         exclude group: 'com.vaadin.external.google'
         exclude group:"org.slf4j"
     }
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.1.3.RELEASE'
 	compile group: 'org.springframework', name: 'springloaded', version: '1.2.8.RELEASE'
     compile group: 'org.webjars', name: 'bootstrap', version: '3.3.2'
