--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,43 @@
-# Ignore Gradle project-specific cache directory
-.gradle
-
-# Directories #
-/build/
-/bin/
-/target/
- 
-# OS Files #
+*.java.hsp
+*.sonarj
+*.sw*
 .DS_Store
-  
-*.class
- 
-# Package Files #
-*.jar
-*.war
-*.ear
-*.db
-      
-# Eclipse #
-.project
-.metadata
+.settings
+.springBeans
+bin
+build.sh
+integration-repo
+ivy-cache
+jxl.log
+jmx.log
+derby.log
+spring-test/test-output/
+.gradle
+argfile*
+pom.xml
+activemq-data/
+
+classes/
+/build
+buildSrc/build
+/spring-*/build
+/spring-core/kotlin-coroutines/build
+/framework-bom/build
+/integration-tests/build
+/src/asciidoc/build
+target/
+
+# Eclipse artifacts, including WTP generated manifests
 .classpath
-.settings/
-.loadpath
- 
-bin/**
-tmp/**
-tmp/**/*
-*.tmp
-*.bak
+.project
+spring-*/src/main/java/META-INF/MANIFEST.MF
+
+# IDEA artifacts and output dirs
+*.iml
+*.ipr
+*.iws
+.idea
+out
+test-output
+atlassian-ide-plugin.xml
+.gradletasknamecache
