--- a/build.gradle
+++ b/build.gradle
@@ -50,5 +50,6 @@ dependencies {
 	compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
 	compile group: 'commons-io', name: 'commons-io', version: '2.6'
 	compile group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.11'
+	compile group: 'com.google.guava', name: 'guava', version: '28.1-jre'
 	
 }
