--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
         exclude group: 'com.vaadin.external.google'
         exclude group:"org.slf4j"
     }
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.1.4.RELEASE'
     testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.1.3.RELEASE'
 	compile group: 'org.springframework', name: 'springloaded', version: '1.2.8.RELEASE'
@@ -51,5 +52,4 @@ dependencies {
 	compile group: 'commons-io', name: 'commons-io', version: '2.6'
 	compile group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.11'
 	compile group: 'com.google.guava', name: 'guava', version: '28.1-jre'
-	
 }
