--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ dependencies {
         exclude group: 'com.vaadin.external.google'
         exclude group:"org.slf4j"
     }
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.1.4.RELEASE'
+    //compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.1.4.RELEASE'
     testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.1.3.RELEASE'
 	compile group: 'org.springframework', name: 'springloaded', version: '1.2.8.RELEASE'
