--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,14 @@
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2console
-spring.datasource.url=jdbc:h2:mem:styleshare;MODE=MySQL
+spring.datasource.url=jdbc:h2:mem:styleshare;MODE=MySQL;DB_CLOSE_DELAY=-1
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=st
 spring.datasource.password=
+
+spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
 
 #logging
 logging.level.styleshare.task=info
