[추가] 가중치에 따라 원하는 값 가져올 수 있도록 EnumeratedDistribution 이용함,

--- a/build.gradle
+++ b/build.gradle
@@ -58,5 +58,7 @@ dependencies {
 	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
 	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 	implementation 'junit:junit:4.12'
+	compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
+
 
 }
