--- a/build.gradle
+++ b/build.gradle
@@ -60,5 +60,7 @@ dependencies {
 	implementation 'junit:junit:4.12'
 	compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
 
+	compile group: 'org.apache.ignite', name: 'ignite-core', version: '2.8.1'
+	compile group: 'org.apache.ignite', name: 'ignite-spring', version: '2.8.0'
 
 }
